src/tests/function-declarations/10.txt
function-declarations/10.c:0:1: error: no main function defined
 
 ^
function-declarations/10.c:1:1: error: identifier 'sum' already taken by function
 int sum(int a, int b);
 ^
